# realsense-ros-sdf

./: LICENSE  README.md
realsense2_description_sdf/: CMakeLists.txt  package.xml
realsense2_description_sdf/models/: d435_camera.sdf  d435i_camera.sdf
realsense2_description_sdf/models/d435_camera/: model.config  model.sdf
realsense2_description_sdf/models/d435i_camera/: model.config  model.sdf
